--- a/download.html
+++ b/download.html
@@ -6,7 +6,10 @@
 <title>Secure Access</title>
 
 <style>
-*{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto}
+*{
+  box-sizing:border-box;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto
+}
 body{
   margin:0;
   min-height:100vh;
@@ -28,18 +31,23 @@ body{
   filter:blur(1px);
   z-index:0;
 }
-.watermark .pw-logo{transform:scale(3.2);}
+.watermark .pw-logo{
+  transform:scale(3.2);
+}
 
-/* ===== GLASS CARD ===== */
+/* ===== GLASS CARD (LOGIN + DASHBOARD) ===== */
 .card{
   width:100%;
   max-width:420px;
   background:rgba(255,255,255,0.55);
   backdrop-filter:blur(14px) saturate(160%);
+  -webkit-backdrop-filter:blur(14px) saturate(160%);
   border-radius:26px;
   padding:28px;
   border:1px solid rgba(255,255,255,0.35);
-  box-shadow:0 30px 60px rgba(0,0,0,.18);
+  box-shadow:
+    0 30px 60px rgba(0,0,0,.18),
+    inset 0 1px 0 rgba(255,255,255,.4);
   position:relative;
   z-index:1;
 }
@@ -47,7 +55,8 @@ body{
 
 /* ===== PW LOGO ===== */
 .pw-logo{
-  width:120px;height:120px;
+  width:120px;
+  height:120px;
   margin:0 auto 14px;
   background:#000;
   border-radius:50%;
@@ -59,7 +68,8 @@ body{
 .pw-logo::before{
   content:"";
   position:absolute;
-  width:82%;height:82%;
+  width:82%;
+  height:82%;
   border-radius:50%;
   border:5px solid #fff;
   border-left-color:transparent;
@@ -116,8 +126,11 @@ button{
   margin-top:8px;
   animation:blink 1.2s infinite;
 }
-@keyframes blink{50%{opacity:.65}}
+@keyframes blink{
+  50%{opacity:.65}
+}
 
+/* ===== SECTIONS ===== */
 .section{
   background:rgba(255,255,255,.65);
   border-radius:18px;
@@ -163,7 +176,9 @@ iframe{
 
 <!-- WATERMARK -->
 <div class="watermark">
-  <div class="pw-logo"><div class="pw-text">PW</div></div>
+  <div class="pw-logo">
+    <div class="pw-text">PW</div>
+  </div>
 </div>
 
 <div class="card">
@@ -171,8 +186,10 @@ iframe{
 <!-- LOGIN -->
 <div id="loginBox">
   <div class="pw-logo"><div class="pw-text">PW</div></div>
+
   <input id="roomPass" type="password" placeholder="Enter room password">
   <div class="hint">Hint: <b>RS@DDMMYYYY</b></div>
+
   <button onclick="login()">Continue</button>
   <div id="roomErr" class="hint"></div>
 </div>
@@ -192,7 +209,7 @@ iframe{
       <span>📘 Instructions</span><span>▼</span>
     </div>
     <div id="instr" class="instruction-content">
-      Access valid for 24 hours only due to copyright ©️ issues.
+      Access is valid for 24 hours only due to copyright ©️ issues.
     </div>
   </div>
 
@@ -207,7 +224,9 @@ iframe{
 
   <!-- WEBSITE -->
   <div class="section">
-    <button onclick="window.open('https://rarestudy.site','_blank')">Open Website</button>
+    <button onclick="window.open('https://rarestudy.site','_blank')">
+      Open Website
+    </button>
   </div>
 
   <!-- APK -->
@@ -218,68 +237,84 @@ iframe{
     <button onclick="unlockAPK()">Unlock APK</button>
     <div id="apkErr" class="hint"></div>
   </div>
-
 </div>
+
 </div>
 
 <script>
 const DAY=86400000;
 
-/* 1-second password visibility */
+/* ===== 1 SECOND PASSWORD VISIBILITY ===== */
 function oneSecondVisibility(input){
- let t;
- input.addEventListener("input",()=>{
-  input.type="text";
-  clearTimeout(t);
-  t=setTimeout(()=>input.type="password",1000);
- });
+  let t;
+  input.addEventListener("input",()=>{
+    input.type="text";
+    clearTimeout(t);
+    t=setTimeout(()=>input.type="password",1000);
+  });
 }
 oneSecondVisibility(roomPass);
 oneSecondVisibility(apkPass);
 
+/* ===== PASSWORD LOGIC ===== */
 function roomPassword(){
- const d=new Date();
- return "RS@"+String(d.getDate()).padStart(2,'0')+
-        String(d.getMonth()+1).padStart(2,'0')+
-        d.getFullYear();
+  const d=new Date();
+  return "RS@"+String(d.getDate()).padStart(2,'0')+
+         String(d.getMonth()+1).padStart(2,'0')+
+         d.getFullYear();
 }
 function apkPassword(){
- const d=new Date();
- return "APK@"+String(d.getDate()).padStart(2,'0')+
-        String(d.getMonth()+1).padStart(2,'0')+
-        d.getFullYear();
+  const d=new Date();
+  return "APK@"+String(d.getDate()).padStart(2,'0')+
+         String(d.getMonth()+1).padStart(2,'0')+
+         d.getFullYear();
 }
 
+/* ===== LOGIN ===== */
 function login(){
- if(roomPass.value!==roomPassword()){
-  roomErr.textContent="Wrong password";
-  return;
- }
- localStorage.loginTime=Date.now();
- loginBox.classList.add("hidden");
- dash.classList.remove("hidden");
- startTimer();
+  if(roomPass.value!==roomPassword()){
+    roomErr.textContent="Wrong password";
+    return;
+  }
+  localStorage.loginTime=Date.now();
+  loginBox.classList.add("hidden");
+  dash.classList.remove("hidden");
+  startTimer();
 }
 
 function startTimer(){
- setInterval(()=>{
-  let left=DAY-(Date.now()-localStorage.loginTime);
-  if(left<=0){localStorage.clear();location.reload();}
-  let h=Math.floor(left/3600000),
-      m=Math.floor(left%3600000/60000),
-      s=Math.floor(left%60000/1000);
-  timer.textContent=`Session expires in ${h}h ${m}m ${s}s`;
- },1000);
+  setInterval(()=>{
+    let left=DAY-(Date.now()-localStorage.loginTime);
+    if(left<=0){
+      localStorage.clear();
+      location.reload();
+    }
+    let h=Math.floor(left/3600000),
+        m=Math.floor(left%3600000/60000),
+        s=Math.floor(left%60000/1000);
+    timer.textContent=`Session expires in ${h}h ${m}m ${s}s`;
+  },1000);
 }
 
+/* ===== APK ===== */
 function unlockAPK(){
- if(apkPass.value!==apkPassword()){
-  apkErr.textContent="Wrong APK password";
-  return;
- }
- apkErr.textContent="APK unlocked (refresh will hide again)";
+  if(apkPass.value!==apkPassword()){
+    apkErr.textContent="Wrong APK password";
+    return;
+  }
+  apkErr.textContent="APK unlocked (refresh will hide again)";
 }
+
+/* ===== AUTO LOGIN (REFRESH SAFE) ===== */
+window.onload=()=>{
+  let t=localStorage.loginTime;
+  if(t && Date.now()-t<DAY){
+    loginBox.classList.add("hidden");
+    dash.classList.remove("hidden");
+    startTimer();
+  }
+};
 </script>
 
 </body>
-</html>
+  </html>
