--- a/download.html
+++ b/download.html
@@ -6,10 +6,7 @@
 <title>Secure Access</title>
 
 <style>
-*{
-  box-sizing:border-box;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto
-}
+*{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto}
 body{
   margin:0;
   min-height:100vh;
@@ -19,7 +16,7 @@ body{
   background:linear-gradient(135deg,#eef1f7,#f9fafc);
 }
 
-/* ===== WATERMARK ===== */
+/* WATERMARK */
 .watermark{
   position:fixed;
   inset:0;
@@ -27,36 +24,31 @@ body{
   justify-content:center;
   align-items:center;
   pointer-events:none;
-  opacity:0.28;
+  opacity:0.3;
   filter:blur(1px);
   z-index:0;
 }
-.watermark .pw-logo{
-  transform:scale(3.2);
-}
+.watermark .pw-logo{transform:scale(3.4);}
 
-/* ===== GLASS CARD (LOGIN + DASHBOARD) ===== */
+/* GLASS CARD */
 .card{
   width:100%;
   max-width:420px;
-  background:rgba(255,255,255,0.55);
-  backdrop-filter:blur(14px) saturate(160%);
-  -webkit-backdrop-filter:blur(14px) saturate(160%);
-  border-radius:26px;
+  background:rgba(255,255,255,0.45);
+  backdrop-filter:blur(18px) saturate(160%);
+  -webkit-backdrop-filter:blur(18px) saturate(160%);
+  border-radius:28px;
   padding:28px;
   border:1px solid rgba(255,255,255,0.35);
-  box-shadow:
-    0 30px 60px rgba(0,0,0,.18),
-    inset 0 1px 0 rgba(255,255,255,.4);
+  box-shadow:0 30px 60px rgba(0,0,0,.18);
   position:relative;
   z-index:1;
 }
 .hidden{display:none}
 
-/* ===== PW LOGO ===== */
+/* LOGO */
 .pw-logo{
-  width:120px;
-  height:120px;
+  width:120px;height:120px;
   margin:0 auto 14px;
   background:#000;
   border-radius:50%;
@@ -68,8 +60,7 @@ body{
 .pw-logo::before{
   content:"";
   position:absolute;
-  width:82%;
-  height:82%;
+  width:82%;height:82%;
   border-radius:50%;
   border:5px solid #fff;
   border-left-color:transparent;
@@ -83,7 +74,7 @@ body{
   font-weight:bold;
 }
 
-/* ===== INPUT / BUTTON ===== */
+/* INPUTS */
 input{
   width:100%;
   padding:14px;
@@ -91,7 +82,7 @@ input{
   border:1px solid rgba(0,0,0,.15);
   font-size:14px;
   margin-top:12px;
-  background:rgba(255,255,255,.85);
+  background:rgba(255,255,255,.9);
 }
 button{
   width:100%;
@@ -109,14 +100,11 @@ button{
   font-size:12.5px;
   color:#333;
   margin-top:6px;
+  line-height:1.6;
 }
 
-/* ===== ACCESS & TIMER ===== */
-.access{
-  text-align:center;
-  font-weight:800;
-  letter-spacing:.5px;
-}
+/* TIMER */
+.access{text-align:center;font-weight:800}
 .timer{
   background:#000;
   color:#fff;
@@ -126,20 +114,14 @@ button{
   margin-top:8px;
   animation:blink 1.2s infinite;
 }
-@keyframes blink{
-  50%{opacity:.65}
-}
+@keyframes blink{50%{opacity:.65}}
 
-/* ===== SECTIONS ===== */
 .section{
-  background:rgba(255,255,255,.65);
-  border-radius:18px;
-  padding:16px;
-  margin-top:16px;
-  border:1px solid rgba(255,255,255,.4);
+  background:transparent;
+  margin-top:18px;
 }
 
-/* ===== INSTRUCTIONS ===== */
+/* INSTRUCTIONS */
 .instruction-header{
   display:flex;
   justify-content:space-between;
@@ -157,11 +139,11 @@ button{
   opacity:1;
 }
 
-/* ===== VIDEO ===== */
+/* VIDEO */
 iframe{
   width:100%;
   height:200px;
-  border-radius:12px;
+  border-radius:14px;
   border:none;
 }
 .video-link{
@@ -174,11 +156,8 @@ iframe{
 
 <body>
 
-<!-- WATERMARK -->
 <div class="watermark">
-  <div class="pw-logo">
-    <div class="pw-text">PW</div>
-  </div>
+  <div class="pw-logo"><div class="pw-text">PW</div></div>
 </div>
 
 <div class="card">
@@ -189,6 +168,7 @@ iframe{
 
   <input id="roomPass" type="password" placeholder="Enter room password">
   <div class="hint">Hint: <b>RS@DDMMYYYY</b></div>
+  <div class="hint">⚠️ Password automatically changes after 24 hours</div>
 
   <button onclick="login()">Continue</button>
   <div id="roomErr" class="hint"></div>
@@ -196,6 +176,7 @@ iframe{
 
 <!-- DASHBOARD -->
 <div id="dash" class="hidden">
+
   <div class="pw-logo" style="width:90px;height:90px">
     <div class="pw-text" style="font-size:46px">PW</div>
   </div>
@@ -237,14 +218,14 @@ iframe{
     <button onclick="unlockAPK()">Unlock APK</button>
     <div id="apkErr" class="hint"></div>
   </div>
-</div>
 
+</div>
 </div>
 
 <script>
 const DAY=86400000;
 
-/* ===== 1 SECOND PASSWORD VISIBILITY ===== */
+/* 1-second password visibility */
 function oneSecondVisibility(input){
   let t;
   input.addEventListener("input",()=>{
@@ -256,7 +237,6 @@ function oneSecondVisibility(input){
 oneSecondVisibility(roomPass);
 oneSecondVisibility(apkPass);
 
-/* ===== PASSWORD LOGIC ===== */
 function roomPassword(){
   const d=new Date();
   return "RS@"+String(d.getDate()).padStart(2,'0')+
@@ -270,7 +250,6 @@ function apkPassword(){
          d.getFullYear();
 }
 
-/* ===== LOGIN ===== */
 function login(){
   if(roomPass.value!==roomPassword()){
     roomErr.textContent="Wrong password";
@@ -296,7 +275,6 @@ function startTimer(){
   },1000);
 }
 
-/* ===== APK ===== */
 function unlockAPK(){
   if(apkPass.value!==apkPassword()){
     apkErr.textContent="Wrong APK password";
@@ -305,7 +283,7 @@ function unlockAPK(){
   apkErr.textContent="APK unlocked (refresh will hide again)";
 }
 
-/* ===== AUTO LOGIN (REFRESH SAFE) ===== */
+/* AUTO LOGIN ON REFRESH */
 window.onload=()=>{
   let t=localStorage.loginTime;
   if(t && Date.now()-t<DAY){
