--- a/download.html
+++ b/download.html
@@ -7,6 +7,7 @@
 
 <style>
 *{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto}
+
 body{
   margin:0;
   min-height:100vh;
@@ -16,7 +17,7 @@ body{
   background:linear-gradient(135deg,#eef1f7,#f9fafc);
 }
 
-/* WATERMARK */
+/* ===== WATERMARK ===== */
 .watermark{
   position:fixed;
   inset:0;
@@ -24,17 +25,20 @@ body{
   justify-content:center;
   align-items:center;
   pointer-events:none;
-  opacity:0.3;
-  filter:blur(1px);
   z-index:0;
+  opacity:0.38;
+  filter:blur(0.6px);
 }
-.watermark .pw-logo{transform:scale(3.4);}
+.watermark .pw-logo{
+  transform:scale(3.2);
+  opacity:0.9;
+}
 
-/* GLASS CARD */
+/* ===== GLASS CARD (LOGIN + DASHBOARD SAME) ===== */
 .card{
   width:100%;
   max-width:420px;
-  background:rgba(255,255,255,0.45);
+  background:rgba(255,255,255,0.38);
   backdrop-filter:blur(18px) saturate(160%);
   -webkit-backdrop-filter:blur(18px) saturate(160%);
   border-radius:28px;
@@ -44,11 +48,13 @@ body{
   position:relative;
   z-index:1;
 }
+
 .hidden{display:none}
 
-/* LOGO */
+/* ===== PW LOGO ===== */
 .pw-logo{
-  width:120px;height:120px;
+  width:120px;
+  height:120px;
   margin:0 auto 14px;
   background:#000;
   border-radius:50%;
@@ -60,7 +66,8 @@ body{
 .pw-logo::before{
   content:"";
   position:absolute;
-  width:82%;height:82%;
+  width:82%;
+  height:82%;
   border-radius:50%;
   border:5px solid #fff;
   border-left-color:transparent;
@@ -74,7 +81,7 @@ body{
   font-weight:bold;
 }
 
-/* INPUTS */
+/* ===== INPUTS ===== */
 input{
   width:100%;
   padding:14px;
@@ -82,7 +89,7 @@ input{
   border:1px solid rgba(0,0,0,.15);
   font-size:14px;
   margin-top:12px;
-  background:rgba(255,255,255,.9);
+  background:rgba(255,255,255,.92);
 }
 button{
   width:100%;
@@ -103,8 +110,12 @@ button{
   line-height:1.6;
 }
 
-/* TIMER */
-.access{text-align:center;font-weight:800}
+/* ===== ACCESS + TIMER ===== */
+.access{
+  text-align:center;
+  font-weight:800;
+  margin-top:4px;
+}
 .timer{
   background:#000;
   color:#fff;
@@ -116,12 +127,9 @@ button{
 }
 @keyframes blink{50%{opacity:.65}}
 
-.section{
-  background:transparent;
-  margin-top:18px;
-}
+.section{margin-top:18px}
 
-/* INSTRUCTIONS */
+/* ===== INSTRUCTIONS ===== */
 .instruction-header{
   display:flex;
   justify-content:space-between;
@@ -133,13 +141,15 @@ button{
   overflow:hidden;
   opacity:0;
   transition:.5s;
+  font-size:13px;
+  line-height:1.7;
 }
 .instruction-content.open{
   max-height:1600px;
   opacity:1;
 }
 
-/* VIDEO */
+/* ===== VIDEO ===== */
 iframe{
   width:100%;
   height:200px;
@@ -156,25 +166,26 @@ iframe{
 
 <body>
 
+<!-- WATERMARK -->
 <div class="watermark">
   <div class="pw-logo"><div class="pw-text">PW</div></div>
 </div>
 
 <div class="card">
 
-<!-- LOGIN -->
+<!-- ===== LOGIN ===== -->
 <div id="loginBox">
   <div class="pw-logo"><div class="pw-text">PW</div></div>
 
   <input id="roomPass" type="password" placeholder="Enter room password">
   <div class="hint">Hint: <b>RS@DDMMYYYY</b></div>
-  <div class="hint">⚠️ Password automatically changes after 24 hours</div>
+  <div class="hint">Password automatically changes after 24 hours</div>
 
   <button onclick="login()">Continue</button>
   <div id="roomErr" class="hint"></div>
 </div>
 
-<!-- DASHBOARD -->
+<!-- ===== DASHBOARD ===== -->
 <div id="dash" class="hidden">
 
   <div class="pw-logo" style="width:90px;height:90px">
@@ -190,7 +201,10 @@ iframe{
       <span>📘 Instructions</span><span>▼</span>
     </div>
     <div id="instr" class="instruction-content">
-      Access is valid for 24 hours only due to copyright ©️ issues.
+      Access is valid for 24 hours only due to copyright © issues.<br>
+      If any extra page or ad opens, press BACK once and continue.<br>
+      For fewer ads, use Opera Mini browser.<br>
+      APK file works on Android devices only.
     </div>
   </div>
 
@@ -214,7 +228,7 @@ iframe{
   <div class="section">
     <input id="apkPass" type="password" placeholder="Enter APK password">
     <div class="hint">Example: <b>APK@DDMMYYYY</b></div>
-    <div class="hint">APK works on <b>Android devices only</b></div>
+    <div class="hint">APK supported on <b>Android devices only</b></div>
     <button onclick="unlockAPK()">Unlock APK</button>
     <div id="apkErr" class="hint"></div>
   </div>
@@ -225,7 +239,7 @@ iframe{
 <script>
 const DAY=86400000;
 
-/* 1-second password visibility */
+/* 1 second password visibility */
 function oneSecondVisibility(input){
   let t;
   input.addEventListener("input",()=>{
@@ -283,7 +297,6 @@ function unlockAPK(){
   apkErr.textContent="APK unlocked (refresh will hide again)";
 }
 
-/* AUTO LOGIN ON REFRESH */
 window.onload=()=>{
   let t=localStorage.loginTime;
   if(t && Date.now()-t<DAY){
