--- a/download.html
+++ b/download.html
@@ -7,6 +7,7 @@
 
 <style>
 *{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto}
+
 body{
   margin:0;
   min-height:100vh;
@@ -16,7 +17,7 @@ body{
   background:linear-gradient(135deg,#eef1f7,#f9fafc);
 }
 
-/* ===== WATERMARK ===== */
+/* ===== WATERMARK (VISIBLE BUT CLASSY) ===== */
 .watermark{
   position:fixed;
   inset:0;
@@ -25,11 +26,11 @@ body{
   align-items:center;
   pointer-events:none;
   z-index:0;
-  opacity:0.42;
-  filter:blur(0.4px);
+  opacity:0.45;              /* increased */
+  filter:blur(0.4px);        /* softer blur */
 }
 .watermark .pw-logo{
-  transform:scale(3.4);
+  transform:scale(3.6);
   opacity:0.95;
 }
 
@@ -37,19 +38,19 @@ body{
 .card{
   width:100%;
   max-width:420px;
-  background:rgba(255,255,255,0.28);
-  backdrop-filter:blur(22px) saturate(170%);
-  -webkit-backdrop-filter:blur(22px) saturate(170%);
-  border-radius:30px;
+  background:rgba(255,255,255,0.32); /* more transparent */
+  backdrop-filter:blur(18px) saturate(160%);
+  -webkit-backdrop-filter:blur(18px) saturate(160%);
+  border-radius:28px;
   padding:28px;
   border:1px solid rgba(255,255,255,0.35);
-  box-shadow:0 35px 70px rgba(0,0,0,.22);
+  box-shadow:0 30px 60px rgba(0,0,0,.18);
   position:relative;
   z-index:1;
 }
 .hidden{display:none}
 
-/* ===== LOGO ===== */
+/* ===== PW LOGO ===== */
 .pw-logo{
   width:120px;height:120px;
   margin:0 auto 14px;
@@ -121,11 +122,13 @@ button{
 
 .section{margin-top:18px}
 iframe{width:100%;height:200px;border-radius:14px;border:none}
+.video-link{text-align:center;font-size:13px;margin-top:8px}
 </style>
 </head>
 
 <body>
 
+<!-- WATERMARK -->
 <div class="watermark">
   <div class="pw-logo"><div class="pw-text">PW</div></div>
 </div>
@@ -135,9 +138,11 @@ iframe{width:100%;height:200px;border-radius:14px;border:none}
 <!-- LOGIN -->
 <div id="loginBox">
   <div class="pw-logo"><div class="pw-text">PW</div></div>
+
   <input id="roomPass" type="password" placeholder="Enter room password">
   <div class="hint">Hint: <b>RS@DDMMYYYY</b></div>
-  <div class="hint">Password auto-changes after 24 hours</div>
+  <div class="hint">Password automatically changes after 24 hours</div>
+
   <button onclick="login()">Continue</button>
   <div id="roomErr" class="hint"></div>
 </div>
@@ -154,24 +159,34 @@ iframe{width:100%;height:200px;border-radius:14px;border:none}
   <!-- VIDEO -->
   <div class="section">
     <iframe src="https://drive.google.com/file/d/16WmuBH_ycBUAsqNYaSDnJ9nbS5s2JF2s/preview"></iframe>
+    <div class="video-link">
+      If video does not play on PC/Laptop,
+      <a href="https://drive.google.com/file/d/16WmuBH_ycBUAsqNYaSDnJ9nbS5s2JF2s/view" target="_blank">open here</a>
+    </div>
+  </div>
+
+  <!-- WEBSITE -->
+  <div class="section">
+    <button onclick="window.open('https://rarestudy.site','_blank')">Open Website</button>
   </div>
 
   <!-- APK -->
   <div class="section">
     <input id="apkPass" type="password" placeholder="Enter APK password">
     <div class="hint">Example: <b>APK@DDMMYYYY</b></div>
-    <div class="hint">APK works on <b>Android devices only</b></div>
+    <div class="hint">APK supported on <b>Android devices only</b></div>
     <button onclick="unlockAPK()">Unlock APK</button>
     <div id="apkErr" class="hint"></div>
   </div>
 </div>
+
 </div>
 
 <script>
 const DAY=86400000;
 let roomAttempts=3, apkAttempts=3;
 
-/* password visibility */
+/* 1 second password visibility */
 function visible1s(el){
   let t;
   el.addEventListener("input",()=>{
@@ -253,4 +268,4 @@ window.onload=()=>{
 </script>
 
 </body>
-    </html>
+        </html>
